--- a/static/src/css/pos.css
+++ b/static/src/css/pos.css
@@ -93,11 +93,6 @@
 .point-of-sale .pos-right-align {
     text-align: right;
 }
-.point-of-sale .pos-right-center {
-    text-align: center;
-	font-weight:bold;
-	font-size: 18px;
-}
 .point-of-sale .pos-right-align input {
     text-align: right;
     border: 1px solid #cecbcb;
@@ -199,6 +194,15 @@
     font-weight: 900;
 }
 
+.point-of-sale #rightheader .customername{
+    float:right;
+    color:#DDD;
+    font-size:16px;
+    margin-right:32px;
+    margin-top:10px;
+    font-style:italic;
+}
+
 /*  c) The session buttons */
 
 .point-of-sale #rightheader .header-button{
@@ -238,9 +242,7 @@
     font-style: italic;
     cursor:pointer;
 }
-.point-of-sale .oe_pos_synch-notification.oe_inactive{
-    cursor: default;
-}
+
 .point-of-sale .oe_pos_synch-notification .oe_status_red{
     display:inline-block;
     cursor:pointer;
@@ -549,9 +551,7 @@
     background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
-    /* for some reason the -90deg orientation doesn't match the -webkit-linear-gradient. It should be 180deg here.
-     * webkit also insists on rendering *both* gradients instead of only the native one. So it doesn't looks right. ugh. 
-    background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1)); */
+    background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     /*background:#FFF;*/
     padding: 3px;
     padding-top: 15px;
@@ -572,7 +572,6 @@
     background:#fff;
     border: 1px solid #fff;
     border-radius: 3px;
-    overflow: hidden;
     -webkit-box-shadow: 0px 2px 0px #dad8e4, 0px 1px 8px #636480; 
        -moz-box-shadow: 0px 2px 0px #dad8e4, 0px 1px 8px #636480; 
             box-shadow: 0px 2px 0px #dad8e4, 0px 1px 8px #636480; 
@@ -589,6 +588,15 @@
 .point-of-sale .product .product-img img {
     max-height: 100px;
     max-width:  120px;
+}
+
+.point-of-sale .product .code-tag {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    vertical-align: top;
+    line-height: 13px;
+    padding: 2px 5px;
 }
 
 .point-of-sale .product .price-tag {
@@ -614,14 +622,10 @@
     top:auto;
     line-height: 14px;
     width:100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
     background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
     background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
-    /* troublesome in latest webkit
     background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
-    */
     /*background:#FFF;*/
     padding: 3px;
     padding-top:15px;
@@ -776,7 +780,7 @@
 
 .point-of-sale .pos-sale-ticket {
     text-align: left;
-    width: 900px;
+    width: 300px;
     background-color: white;
     margin: 20px;
     padding: 15px;
@@ -793,11 +797,9 @@
 .point-of-sale .pos-sale-ticket table {
     width: 100%;
     border: 0;
-    table-layout: fixed;
 }
 .point-of-sale .pos-sale-ticket table td {
     border: 0;
-    word-wrap: break-word;
 }
 
 @media print {
@@ -896,16 +898,14 @@
 
 .point-of-sale .scale-screen .product-name {
     position: absolute;
-    left:40px;
+    left:0;
     top:50px;
     height:50px;
-    font-size:36px;
+    font-size:40px;
     line-height:50px;
     text-align:right;
     right:275px;
     color: #8d8d8d;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 .point-of-sale .scale-screen .weight{
     position: absolute;
@@ -1009,20 +1009,12 @@
     margin-bottom:10px;
 }
 .point-of-sale .order .summary .line{
-    float: right;
     margin-right:15px;
-    margin-left: 15px;
     padding-top:5px;
     border-top: solid 2px;
     border-color:#777;
 }
-.point-of-sale .order .summary .line .subentry{
-    font-size: 10px;
-    font-weight: normal;
-    text-align: center;
-}
 .point-of-sale .order .summary .line.empty{
-    text-align: right;
     border-color:#BBB;
     color:#999;
 }
@@ -1069,7 +1061,6 @@
     font-weight: bold;
     width:80%;
     overflow:hidden;
-    text-overflow: ellipsis;
 }
 .point-of-sale .order .orderline .price{
     padding:0;
@@ -1357,6 +1348,161 @@
     width: 180px;
     height: 180px;
     line-height:180px;
+}
+
+.point-of-sale .modal-dialog .popup-selection{
+    position: absolute;
+    left:30%;
+    top:10%;
+    width: 700px;
+    height:70%;
+    padding:10px;
+    padding-top:20px;
+    text-align:left;
+    font-size:14px;
+    font-weight:bold;
+    background-color: #F0EEEE;
+    border-radius: 4px;
+    box-shadow: 0px -1px white, 0px 1px white, 0px 4px #949494, 0px 10px 20px rgba(0, 0, 0, 0.3);
+    z-index:1200;
+}
+
+.point-of-sale .popup-selection .button{
+    float:right;
+    width: 110px;
+    height: 40px;
+    line-height:40px;
+    text-align:center;
+    margin:3px;
+    margin-top:10px;
+    margin-right:50px;
+
+    font-size:   14px;
+    font-weight: bold;
+
+    cursor: pointer;
+
+    border: 1px solid #cacaca;
+    border-radius: 4px;
+
+    background: #e2e2e2;
+    background: -webkit-linear-gradient(#f0f0f0, #e2e2e2);
+    background:    -moz-linear-gradient(#f0f0f0, #e2e2e2);
+    background:     -ms-linear-gradient(#f0f0f0, #e2e2e2);
+    background:         linear-gradient(#f0f0f0, #e2e2e2);
+    -webkit-box-shadow: 0px 2px 2px rgba(0,0,0, 0.3);
+       -moz-box-shadow: 0px 2px 2px rgba(0,0,0, 0.3);
+            box-shadow: 0px 2px 2px rgba(0,0,0, 0.3);
+}
+.point-of-sale .popup-selection .button:hover {
+    color: white;
+    background: #7f82ac;
+    border: 1px solid #7f82ac;
+    background: -webkit-linear-gradient(#9d9fc5, #7f82ac);
+    background:    -moz-linear-gradient(#9d9fc5, #7f82ac);
+    background:     -ms-linear-gradient(#9d9fc5, #7f82ac);
+    background:         linear-gradient(#9d9fc5, #7f82ac);
+
+    -webkit-transition-property: background, border;
+    -webkit-transition-duration: 0.2s;
+    -webkit-transition-timing-function: ease-out;
+}
+
+/*  customer selection */
+
+#customer-cancel {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+}
+
+.point-of-sale .customer-list-container {
+    position: absolute;
+    top:70px;
+    left:5px;
+    right:5px;
+    bottom: 70px;
+    text-align: left;
+    overflow: auto;
+}
+
+.point-of-sale .customer-list-scroller {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+            box-sizing: border-box;
+    width:98%;
+}
+
+.customer-list-scroller ol {
+    list-style: none;
+}
+
+.customer-list-scroller ol li { }
+
+.customer-list-scroller ol li a {
+    display:block;
+    text-decoration:none;
+    color:#000000;
+    background-color:#FFFFFF;
+    line-height:20px;
+    border-bottom-style:solid;
+    border-bottom-width:1px;
+    border-bottom-color:#CCCCCC;
+    padding-left:10px;
+    cursor:pointer;
+}
+
+.customer-list-scroller ol li a:hover {
+    color:#FFFFFF;
+    background-image:url(/point_of_sale/static/src/img/hover.png);
+    background-repeat:repeat-x;
+}
+
+.point-of-sale .customer {
+    width: 100%;
+}
+
+.point-of-sale .customer a {
+    width: 100%;
+}
+
+.point-of-sale .customer .customer-field {
+    width: 130px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.point-of-sale .customer .customer-name{
+    width: 200px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.point-of-sale .customer .customer-phone {
+    width: 50px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.point-of-sale .customer-searchbox {
+    right: 2px;
+}
+.point-of-sale .customer-searchbox input {
+    width: 130px;
+    border-radius: 11px;
+    border: 1px solid #cecbcb;
+    padding: 3px 19px;
+    margin: 6px;
+    background: url("../img/search.png") no-repeat 5px;
+    background-color: white;
+}
+.point-of-sale .customer-search-clear {
+    postion: absolute;
+    top: 11px;
+    right: 600px;
+    cursor: pointer;
+    display: none;
 }
 
 /*  ********* The ScrollBarWidget  ********* */
